testdata/baselines/reference/submodule/conformance/usingDeclarations.14.errors.txt
usingDeclarations.14.ts(1,11): error TS2741: Property '[Symbol.dispose]' is missing in type '{}' but required in type 'Disposable'.


==== usingDeclarations.14.ts (1 errors) ====
    using x = {};
              ~~
!!! error TS2741: Property '[Symbol.dispose]' is missing in type '{}' but required in type 'Disposable'.
!!! related TS2728 lib.esnext.disposable.d.ts:--:--: '[Symbol.dispose]' is declared here.